# numeral

./: CMakeLists.txt
numeral/: CMakeLists.txt  numeral.cpp  numeral.h
numeral/execution/: execution.cpp  execution.h
numeral/lexer/: lexer.cpp  lexer.h  token.h
numeral/parser/: node.h  parser.cpp  parser.h
